--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,21 +8,21 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="../img/eci_logo.png">
+    <link rel="icon" href="./img/eci_logo.png">
 
     <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/ionicons.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../css/adminlte.min.css">
+    <link rel="stylesheet" href="./css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="./css/googleFonts.css" rel="stylesheet">
     <!-- comboList styles-->
     <link rel="stylesheet" href="./css/comboList.css">
 
     <!-- REQUIRED SCRIPTS -->
 
     <!-- jQuery -->
-    <script src="../plugins/jquery/jquery.min.js"></script>
+    <script src="./plugins/jquery/jquery.min.js"></script>
 
     <script src="./js/comboList.js"></script>
 </head>
