--- a/src/views/oee.ejs
+++ b/src/views/oee.ejs
@@ -8,32 +8,32 @@
 
   <title>ECI MES</title>
 
-  <link rel="icon" href="../img/eci_logo.png">
+  <link rel="icon" href="./img/eci_logo.png">
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.css">
+  <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../css/adminlte.css">
+  <link rel="stylesheet" href="./css/adminlte.css">
   <!-- Google Font: Source Sans Pro  -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link href="./css/googleFonts.css" rel="stylesheet">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="./css/ionicons.css">
 
   <!-- REQUIRED SCRIPTS -->
 
   <!-- jQuery -->
-  <script src="../plugins/jquery/jquery.min.js"></script>
+  <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4  -->
-  <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App  -->
-  <script src="../js/adminlte.min.js"></script>
+  <script src="./js/adminlte.min.js"></script>
   <!-- Moment.js -->
-  <script src="../plugins/moment/moment-with-locales.js"></script>
+  <script src="./plugins/moment/moment-with-locales.js"></script>
   <!-- AMCHARTS LIB-->
-  <script src="//cdn.amcharts.com/lib/4/core.js"></script>
-  <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
-  <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+  <script src="./js/charts/core.js"></script>
+  <script src="./js/charts/charts.js"></script>
+  <script src="./js/charts/animated.js"></script>
 
-  <script src="../js/actTime.js"></script>
+  <script src="./js/actTime.js"></script>
 </head>
 
 <body>
