--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -18,13 +18,15 @@
     <link href="./css/googleFonts.css" rel="stylesheet">
     <!-- comboList styles-->
     <link rel="stylesheet" href="./css/comboList.css">
-
+    <link rel="manifest" href="./manifest.json"
+ 
     <!-- REQUIRED SCRIPTS -->
 
     <!-- jQuery -->
     <script src="./plugins/jquery/jquery.min.js"></script>
 
     <script src="./js/comboList.js"></script>
+    <script src="./js/pwa.js"></script>
 </head>
 
 <body style="background-color: #f4f6f9">
