--- a/src/views/oee.ejs
+++ b/src/views/oee.ejs
@@ -286,7 +286,6 @@
       series1.columns.template.propertyFields.stroke = "color";
       series1.columns.template.strokeOpacity = 1;
 
-      timelineChart.data = timelineChartDataTemplate
 
     }
     
@@ -387,8 +386,28 @@
               timelineChartData.push(timelineChartDataObj)
             }
           }
+          let refereshAllFlag = false;
+          for(var i=0; i<timelineChartData.length; i++)
+          {
+            if(i<timelineChart.data.length)
+            {
+              if(timelineChart.data[i].fromTime !=timelineChartData[i].fromTime)
+              {
+                timelineChart.data[i] = JSON.stringify(timelineChartData[i])
+              }
+            }
+            else
+            {
+              timelineChart.data.push(timelineChartData[i])
+              refereshAllFlag = true;
+            }
+          }
           stationPieChart.data = stationChartData;
-          timelineChart.data = timelineChartData;
+          //timelineChart.data = timelineChartData;
+          if (refereshAllFlag)
+            timelineChart.invalidateData()
+          else
+            timelineChart.invalidateRawData()
           let timeSum = 0;
           let workSum = 0;
           for (var i = 0; i < stationChartData.length; i++) {
